package protol;

message DevStat{
  required int64 duid = 1;
    required int64 last_msg_id=2;
}

message DevOffline{
  required int64 duid = 1;
}

message DevsOnline{
  repeated DevStat dev_online = 1;
  required int32 net_time_sec = 2;
}

enum ResultType{
  SUCCEED = 0;
  FAILED = -1;
  }

message DataOccur{
  	required int64 duid = 1;
}

message DataReq{
	required int64 duid=1;
	required int64 lat_msg_id=2;
}

message DataRes{
   	required int64 duid=1;
   	required int64 msg_id=2;
   	required int64 msg_data=3;
}

message DataResBatchs{
   	repeated DataRes data_batchs=1;
}


// 外部调用rpc协议
// 推送给设备的信息
message PushDeviceReq{
  	required int64 duid = 1;
  	required bytes msg_data = 2;
}

// 批量推送设备的消息
message PushBatchsReq{
  	repeated PushDeviceReq batchs = 1;
}

message PushBatchsRes{
  	required int32 result = 1;
}